vaultwarden/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden
spec:
  selector:
    matchLabels:
      app: vaultwarden
  serviceName: vaultwarden
  template:
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: vaultwarden
        image: vaultwarden/server
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: vaultwarden
          mountPath: /data
        resources:
          requests:
            memory: 100Mi
            cpu: 50m
          limits:
            memory: 500Mi
  volumeClaimTemplates:
  - metadata:
      name: vaultwarden
    spec:
      storageClassName: longhorn
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
