vaultwarden/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: vaultwarden
spec:
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:fMtaLH8vlnoOV7RWdQpKMZ8Cls/gy5/eJhzloRtOPQ==,iv:AL0J0n014f0Z99Koo3fQj7Rw8TKLWEGrQXt/1XpqwT4=,tag:YujwU+48eK5WI7rdeOdQKQ==,type:str]
          middlewares: []
          services:
            - kind: Service
              name: vaultwarden
              port: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-09-12T12:33:26Z"
    mac: ENC[AES256_GCM,data:5+03SrSUW6UUEJkIOvN2k/mO5brN1+6DUuf2zkCUK2tlzzqeTdVKVIi24KWTNumxcRHTa/JoQgrtjDqZmF92ffxiZurbE6X/rsdDIYuuAEglg+VOLVZWIZVcKBvmo2RWLpI8r++7kXUAwmiWh/oqVz/5i95R5ClzZhVct1YaZh0=,iv:5Y2JaI6aDLA2vJCZQcB0I5JJWHYv+vBLbt/KbbLKiSc=,tag:b6osQybGA5WaXwHuAdnSNg==,type:str]
    pgp:
        - created_at: "2023-09-12T12:33:26Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMAyyGYy7YCFAQAQ/9FjJWIi44fAXaaNkJwxkWaUxv1scV/ez06oFDFqSi6re0
[...]
            2f7oxRnV4Q==
            =W4ix
            -----END PGP MESSAGE-----
          fp: 75C3F62D6A9AA2165875F5C680A364E41D3C47AF
    encrypted_regex: ^(match)$
    version: 3.7.3
